# cnn_visualizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  app.py  commitlint.config.js  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-security.yml  release.yml
docs/: index.md
docs/api/: config.md  models.md  visualization.md
docs/getting-started/: installation.md  quickstart.md
src/cnn_visualizer/: __init__.py  config.py
src/cnn_visualizer/models/: __init__.py  manager.py  resnet.py
src/cnn_visualizer/ui/: __init__.py  gradio_app.py
src/cnn_visualizer/visualization/: __init__.py  animation.py  feature_maps.py  gradcam.py
tests/: conftest.py
tests/unit/: test_config.py  test_model_manager.py
tests/unit/visualization/: test_animation.py  test_feature_maps.py  test_gradcam.py
